--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ font-size:3.5em;
  <a href="a" class="logo"></a>
  <ul>
  <li><a href="My website.html" class="active">Home</a></li>
- <li><a href="Blog.html">To-Do List</a></li>
+ <li><a href="Qoutes.html">Qgenerator</a></li>
  <li><a href="calculator.html">Calculator</a></li>
  <li><a href="clock.html">Clock</a></li>
  </ul>
