--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ font-size:3.5em;
  <ul>
  <li><a href="My website.html" class="active">Home</a></li>
  <li><a href="Qoutes.html">Qgenerator</a></li>
+  <li><a href="Blog.html">To do list</a></li>
  <li><a href="calculator.html">Calculator</a></li>
  <li><a href="clock.html">Clock</a></li>
  </ul>
