--- a/index.html
+++ b/index.html
@@ -1,199 +1,229 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-My Website
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Website</title>
 <style type="text/css">
-*{
-margine:0;
-padding:0;
-box-sizing:border-box;
-font-family:'Poppins',sans-serif;
-scroll-behavior:smooth;
-}
-body{
-min-height:100vh;
-background:linear-gradient(#2b1855,#7597de);
-}body .mar{
-margin:0;
-position:center;
-width:100%;
-border-style:;
-height:100px;
-width:100%;
-scroll-amount:0;
-direction:left;
-z-index:1000;
-background: linear-gradient(to bottom,#1c0522,transparent);
-}
-img{
-height:100px;
-width:100px;
-image-spacing:10px;
-}
-header
-{
-position: absolute;
-top:0;
-left:0;
-width:100%;
-padding: 30px 100px;
-display:flex;
-justify-content: space-between;
-align-items:center;
-z-index:1000;
-}
-header .log{
-padding:10px;
-height:1px;
-width:10px;
-z-index:100;
-}
-header .logo
-{
-color:#ffff;
-font-width:700;
-text-decoration: none;
-font-size: 2em;
-text-transform: uppercase;
-text-align:left;
-letter-spacing:2px;
+  /* Reset styles */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+  }
 
+  /* Common styles */
+  body {
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    min-height:100vh;
+    background:linear-gradient(#2b1855,#7597de);
+  
+  }body .mar{
+  margin:0;
+  position:center;
+  width:100%;
+  border-style:;
+  height:100px;
+  width:100%;
+  scroll-amount:0;
+  direction:left;
+  z-index:1000;
+  background: linear-gradient(to bottom,#1c0522,transparent);
+  }
+  img{
+  height:100px;
+  width:100px;
+  image-spacing:1px;
 }
-header ul
-{
-display: flex;
-justify-content: center;
-align-items: center;
-}
-header ul li
-{
-list-style: none;
-margin-left:20px;
+  /* Header styles */
+  header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+  }
 
-}
-header ul li a
-{
-text-decoratiob: none;
-padding: 6px 15px;
-color:#ffff;
-border-radius:20px;
-}
-header ul li a: hover,
-header ul li a.active
-{
-text-style:;
-background: #ffff;
-color : #141519;
-}
-section
-{
-position:relative;
-width:100%;
-height:100vh;
-padding:100px;
-display:flex;
-justify-content:center;
-align-items:center;
-background: linear-gradient(to top,#1c0522,transparent);
+  header .log {
+    padding: 10px;
+    height: 1px;
+    width: 10px;
+    z-index: 100;
+  }
 
-}
-section img
-{
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-object-fit:cover;
-background: linear-gradient(to top,#1c0522,transparent);
+  header .logo {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    text-align: left;
+    letter-spacing: 2px;
+  }
 
-}
+  header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-#text
-{
-position:absolute;
-color:#fff;
-wite-space:nonwrap;
-font-size:700em;
-font-size:1.5em;
-z-index:9;
-}
-#btn
-{
-text-align:left;
-text-decoration:none;
-display:10px 50px;
-padding:8px 30px;
-border-style:dotted;
-border-radius:40px;
-background:white;
-colore:black;
-font-size:1.5em;
-z-index:9;
-transform:translate(100px);
+  header ul li {
+    list-style: none;
+    margin-left: 20px;
+  }
 
-}
-section::before
-{
-content:'';
-position:absolute;
-bottom:0;
-width:100%;
-height:100px;
-background: linear-gradient(to top,#1c0522,transparent);
-z-index:1000;
-}
+  header ul li a {
+    text-decoration: none;
+    padding: 6px 15px;
+    color: #fff;
+    border-radius: 20px;
+  }
 
-.sec
-{
-display:relative;
-position:relative;
-padding:100px;
-background:url("Love.jpg");
-justify-content:center;
-align-items:center;
-}
+  header ul li a:hover,
+  header ul li a.active {
+    background: #fff;
+    color: #141519;
+  }
 
-.sec h2
-{
-font-size:3.5em;
-margin-bottom:10px;
-color:#fff;
-}
-.sec p
-{
-position:relative;
-font-size:1em;
-color:#black;
-}
-.sec h1
-{
-font-size:3.5em;
-}
-.lov
-{
-position:relative;
-padding:100px;
-background:#1c0522;
-}
-.lov h2
-{
-font-size:3.5em;
-margin-bottom:10px;
-color:#fff;
-}
-.lov p
-{
-position:relative;
-font-size:1em;
-color:#fff;
-}
-.lov h1
-{
-font-size:3.5em;
-}
+  /* Section styles */
+  section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to top, #1c0522, transparent);
+  }
+
+  section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  #text {
+    position: absolute;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 1.5em;
+    z-index: 9;
+  }
+
+  #btn {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    border-radius: 40px;
+    background: white;
+    color: black;
+    font-size: 1.5em;
+    z-index: 9;
+    transform: translate(100px);
+  }
+
+  section::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522, transparent);
+    z-index: 1000;
+  }
+  .poem{
+  border:3px solid #000;
+  }
+
+  /* Container styles */
+  .container {
+    display: none;
+    padding: 100px;
+    background: url(Love.jpg);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container h2,
+  .container h1 {
+    font-size: 3.5em;
+    color: #fff;
+    margin-bottom: 10px;
+  }
+
+  .container p {
+  position: relative;
+    font-size: 1em;
+    color: #000;
+  }
+
+  .container a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    border-radius: 40px;
+    background: white;
+    color: black;
+    font-size: 1.5em;
+  }
+  
+  button.left{
+  float:left;
+  border:1px solid #000;
+  width: 90px;
+  height:30px;
+
+  border-radius: 40px;
+  background: white;
+  color: black;
+  font-size: 1.5em;
+ 
+ 
+  }
+  button.right{
+  float:right;
+  border:1px solid #000;
+  width: 90px;
+  height:30px;
+  
+  border-radius: 40px;
+  background: white;
+  color: black;
+  font-size: 1.5em;
+ bottom:10px
+ 
+  }
+
+  /* Navigation buttons */
+  .navigation-buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .navigation-buttons button {
+    margin: 0 10px;
+    padding: 6px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #1c0522;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+  }
 </style>
+
 <body>
 <marquee class="mar" id="mar"> 
 <img src="K.jpg">
@@ -218,6 +248,7 @@ font-size:3.5em;
   <li><a href="Blog.html">To do list</a></li>
  <li><a href="calculator.html">Calculator</a></li>
  <li><a href="clock.html">Clock</a></li>
+ <li><a href="chess.html">ChessG</a></li>
  </ul>
  </header>
  
@@ -227,24 +258,27 @@ font-size:3.5em;
  <a href="#sec" id="btn" >Poem 1</a>
  
  </section>
- 
+ <div class="poem">
  <div class="sec" id="sec">
+ <div class="container">
  <h2> My Poem</h2>
  <p>In a heart once broken, love does reignite,
  A soul awakens, shining ever so bright.
  Through the darkest night, a glimmer finds its way,
  A person finds love, once again, they say.</p>
- 
+ <br/>
 <p> With hesitant steps, they take a chance,
  Leaving behind scars of a failed romance.
  But fate has other plans, a story to rewrite,
  Love blooms anew, casting away the night.
  </p>
+ <br/>
 <p> A tender touch, a smile that melts the heart,
  A connection deep, like a timeless work of art.
  In their embrace, a healing balm is found,
  Love's sweet whispers, a symphony of sound.
  </p>
+ <br/>
  <p>
  Together they journey, hand in hand,
  Creating memories, a future they've planned.
@@ -253,19 +287,21 @@ font-size:3.5em;
  </p>
  <a href="#mar" id="btn" >Back</a>
  </div>
- <div class="lov" id="lov">
+ </div>
+ <div class="container" id="lov">
  <h1><font color="#fff" class="h1">Poem 2</h2>
  <p>In times of joy or sorrow's tide,
  A friend who's always by my side.
  With warmth and care, their presence near,
  A beacon of light, so crystal clear.
  </p>
+ <br/>
  <p>
  Through laughter shared and tears we weep,
  Their steadfast love runs deep and steep.
  With every step, they walk along,
  A bond unbreakable, forever strong.
- </p>
+ </p><br/>
  <p>
  Through thick and thin, they're always there,
  A friend who shows me how to bear.
@@ -276,52 +312,66 @@ font-size:3.5em;
  <a href="#mar" id="btn" >Back</a>
  </div>
  
- <div class="lov" id="pov">
+ <div class="container" id="pov">
  <h1><font color="white">Poem 3</font></h1>
  <p>A tale unfolds of a heart's hushed clutch.
  Silent whispers, unspoken desire,
  A soul that yearns, consumed by fire.
- </p><p>
+ </p><br/><p>
  In hidden glances, a love takes flight,
  Unveiling its wings in the dark of night.
  Fear's icy grip, a binding refrain,
  Conceals the words, the heart would explain.
- </p>
+ </p><br/>
  <p>
  Behind a mask of uncertain fears,
  A tender heart weeps unspoken tears.
  Yet, in silence, a love blooms strong,
- Unseen melodies, a secret song.</p>
+ Unseen melodies, a secret song.</p><br/>
  <p>
  In dreams of whispers, love's notes arise,
  Soft melodies that light up the skies.
  Though he may fear to let words take flight,
  Love's ardor burns, relentless and bright.
- </p><p>
+ </p><br/><p>
  Oh, let him know, in your quiet way,
  That love's flame flickers, will not betray.
  For love's true essence can still transcend,
  The barriers that silence intends.
- </p><p>
+ </p><br/><p>
  So, in your heart, let courage arise,
  Unveil the truth, and watch as it flies.
  For love's embrace can bring solace true,
- When two souls unite, love's whispers ensue.<p>
+ When two souls unite, love's whispers ensue.</p>
  <a href="#mar"  id="btn" >Back</a>
  </div>
- <script type="text/javascript">
+ <div class="btn">
+ <button onclick="showPrevious()" class=" left">Previous</button>
+ <button onclick="showNext()" class="right">Next</button>
+ </div>
  
- let text = document.getElementById('text');
- let btn = =document.getElementById('btn');
+ </div>
  
- window.addEventListener('scroll', function(){
- let value = window.scrollY;
- text.style.left = value='px';
- })
- </script>
+
+<script>
+  // JavaScript code for navigation
+  var containers = document.querySelectorAll(".container");
+  var currentIndex = 0;
+
+  function showPrevious() {
+    containers[currentIndex].style.display = "none";
+    currentIndex = (currentIndex - 1 + containers.length) % containers.length;
+    containers[currentIndex].style.display = "block";
+  }
+
+  function showNext() {
+    containers[currentIndex].style.display = "none";
+    currentIndex = (currentIndex + 1) % containers.length;
+    containers[currentIndex].style.display = "block";
+  }
+
+  // Show the first container initially
+  containers[currentIndex].style.display = "block";
+</script>
 </body>
-
-
-
-</html>
-<html>
+ </html>
