--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
  <li><a href="calculator.html">Calculator</a></li>
  <li><a href="clock.html">Clock</a></li>
  <li><a href="chess.html">ChessG</a></li>
+   <li><a href="Log-In.html">Log-Out</a></li>
  </ul>
  </header>
  
