--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       if (userInput === "" || passInput === "") {
       alert("Error: Username or password cannot be empty");
       } else if (isValid) {
-      window.location.href = "My website.html";
+      window.location.href = "Home.html";
       } else {
       alert("Error: Username or password is incorrect");
       }
