--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ logButton.addEventListener("click", function() {
     const userIndex = validUsers.findIndex(user => user.username === userInput);
 
     if (userIndex !== -1 && validUsers[userIndex].password === passInput) {
+       alert("successfully logged in");
         window.location.assign("My website.html");
     } else {
         if (userInput === "" || passInput === "") {
